--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">Lasagna</a>
+    <ul>
+        <li><a href="recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="recipes/california_sushi_roll.html">California Sushi Roll</a></li>
+        <!--Wester omlete needs proper link. Links to wrong recipe-->
+        <li><a href="recipes/lasagna.html">Wester Omelet</a></li>
+    </ul>
 </body>
 </html>
