--- a/recipes/california_sushi_roll.html
+++ b/recipes/california_sushi_roll.html
@@ -23,5 +23,14 @@
         <li>1 cucumber, sliced lengthwise</li>
         <li>2 sticks imitation crab, sliced lengthwise</li>
     </ul>
+
+    <h2>Steps</h2>
+    <ol>
+        <li>Rinse rice until water runs clear. Combine rice and 1 1/2 cups water in a saucepan and bring to a boil, about 5 minutes. Reduce heat to low, cover, and simmer until water is completely absorbed and rice is soft, 8 to 10 minutes.</li>
+        <li>Use a wooden spoon to transfer cooked rice to a non-metal bowl and set aside to cool.</li>
+        <li>Meanwhile, combine vinegar, sugar, and salt in a small saucepan and bring to a boil, about 5 minutes. Reduce heat and simmer 1 minute more. Combine vinegar mixture with the cooling rice a few tablespoons at a time until rice is coated; you may not need all of the vinegar mixture. Set aside to finish cooling completely, about 15 minutes.</li>
+        <li>Place a sheet of nori on a sushi mat with the rough side facing up. Place a small bowl of water nearby. Use wet hands to evenly spread a handful of rice onto the nori. Arrange cucumber and crab across the nori, about 1/2 inch from the edge closest to you. Roll the wrap starting at the close edge and rolling away from yourself. Press and roll again to seal. Repeat with remaining nori, rice, cucumber, and crab.</li>
+        <li>Dip a sharp knife into water and slice each roll into 8 pieces, rinsing the knife after each cut to prevent sticking.</li>
+    </ol>
 </body>
 </html>
