Linked  western omlete page to index properly

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <li><a href="recipes/lasagna.html">Lasagna</a></li>
         <li><a href="recipes/california_sushi_roll.html">California Sushi Roll</a></li>
         <!--Wester omlete needs proper link. Links to wrong recipe-->
-        <li><a href="recipes/lasagna.html">Wester Omelet</a></li>
+        <li><a href="recipes/western_omelet.html">Western Omelet</a></li>
     </ul>
 </body>
 </html>
